--- a/reciever-docker/Dockerfile
+++ b/reciever-docker/Dockerfile
@@ -90,8 +90,8 @@ RUN chown pipeline-admin:pipeline-admin init_cassandra.cql
 ADD recieve_data.py /home/pipeline-admin/recieve_data.py
 RUN chown pipeline-admin:pipeline-admin recieve_data.py
 
-ADD flume.conf /home/pipeline-admin/flume.conf
-RUN chown pipeline-admin:pipeline-admin flume.conf
+ADD flume_receive.conf /home/pipeline-admin/flume_receive.conf
+RUN chown pipeline-admin:pipeline-admin flume_receive.conf
 
 ADD check-data.py /home/pipeline-admin/check-data.py
 RUN chown pipeline-admin:pipeline-admin check-data.py
@@ -100,4 +100,4 @@ RUN chown pipeline-admin:pipeline-admin check-data.py
 ADD notebooks /home/pipeline-admin/notebooks
 RUN chown -R pipeline-admin:pipeline-admin notebooks
 
-EXPOSE 56565
+EXPOSE 4545
