--- a/source-docker/flume_send.conf
+++ b/source-docker/flume_send.conf
@@ -18,7 +18,6 @@
 
 # connect to another box using AVRO and send the data
     sendAgent.sinks.c1.type = avro
-    sendAgent.sinks.c1.hostname = 172.17.0.2
-    			#NOTE: use your server 2s ip address here
+    sendAgent.sinks.c1.hostname = <Reciever-IP>
     sendAgent.sinks.c1.port = 4545
     		   	#NOTE: This port should be open on Server 2
